--- a/app/views/about/about.html
+++ b/app/views/about/about.html
@@ -92,5 +92,23 @@
 				</p>
 			</div>
 		</div>
+		<div class="row team-members">
+			<div class="col-xs-4 col-sm-3 col-md-2 col-sm-offset-3 col-md-offset-4 team-image">
+				<img src="/images/blank_frame.jpg" alt="LePartycious-team"/>
+			</div>
+			<div class="col-xs-8 col-sm-6">
+				<p class="team-name text-left">
+					SHIVANI JOSHI
+				</p>
+				<p class="team-designation text-left">
+					Product Designer
+				</p>
+				<p class="team-description text-left text-justify">
+					Shivani is an artist by heart. Her love and passion for arts drives her to come up with great innovative ideas.
+					Her unorthodox way of thinking makes her different from others when it comes to designing and arts.
+					She is our Product Designer and consistently works for giving our product a cool look. 
+				</p>
+			</div>
+		</div>
 	</section>
 </div>
