--- a/app/views/data/data.html
+++ b/app/views/data/data.html
@@ -1,4 +1,4 @@
-    <div class="lp-global-breadcrumb" data-ng-hide="breadCrumbLinks | isEmpty">
+    <div class="lp-global-breadcrumb data-page-breadcrumb" data-ng-hide="breadCrumbLinks | isEmpty">
     	<ul>
     		<li data-ng-repeat="(key, value) in breadCrumbLinks">
     			<span data-ng-hide="$index == 0">&nbsp;&nbsp;&gt;&nbsp;&nbsp;</span><a href="{{value}}">{{key}}</a> 
