--- a/app/views/home/home.html
+++ b/app/views/home/home.html
@@ -1,6 +1,6 @@
 <section class="row">
 	<div class="col-xs-12">
-		<h4 class="theme-color subcategory-heading">{{vm.selectedCategory}} INCLUDES</h4>
+		<h4 class="theme-color subcategory-heading">IS THIS WHAT YOU ARE LOOKING FOR</h4>
 						<!-- Sub Category Carousel -->
 						<div class="subcategory-carousel">
 							<div class="swiper-container subcategory-swiper-container" data-ng-repeat="(key,value) in vm.subCategoriesMap" ng-class="'{{key}}'" data-ng-show="vm.selectedCategory == '{{key}}'">
@@ -29,6 +29,7 @@
 					</div>
 </section>
 <!-- Recently Added section starts -->
+<!--
 <section class="bg-grey row">
 	<h2 class="text-center theme-color">RECENTLY ADDED</h2>
 	<div ng-repeat="(key, value) in vm.recentlyAddedData" class="col-xs-10 col-sm-5 col-xs-offset-1 recently-added-section">
@@ -41,14 +42,15 @@
 			</li>
 		</ul>
 	</div>
-</section>
+</section>-->
+
 <!-- LePartycious section starts -->
 <section class="container text-center">
 	<h2 class="theme-color">WELCOME TO LEPARTYCIOUS</h2>
 	<p>
 		Established in October 2015, LePartycious is an online platform for organising events which provides you with the relevant
 
-			information regarding different venues,caterers,photographers and decorators. Its all about bringing all the vendors under
+			information regarding different venues, caterers, photographers, decorators and many more. Its all about bringing all the vendors under
 
 			one roof so that they coordinate well and work towards a success story of  an event.
 			So precisely we are here to make your work convenient and hassel free by helping you choose from the diversified options
@@ -59,7 +61,7 @@
 <!-- Services section starts -->
 <section class="row bg-grey">
 	<div class="container text-center">
-		<div class="h2 theme-color">
+		<div class="h2 theme-color mBottom30">
 			WHAT DO WE HAVE FOR YOU
 		</div>
 		<div class="col-xs-12 col-sm-6 col-md-4 home-page-icons">
