--- a/app/styles/data.css
+++ b/app/styles/data.css
@@ -12,8 +12,8 @@
 	margin-bottom: 20px;
 	background-color: #fff;
 	border: 0 solid transparent;
-	border-radius: 4px;
-	box-shadow: 0 0 2px 2px rgba(0,0,0,0.05);
+	border-radius: 5px;
+	box-shadow: 0 2px 10px 0 rgba(125,124,122,0.5);
 }
 
 .pamphlet-container .pamphlet-header {
@@ -225,4 +225,18 @@ height: 32px;
 
 .filter-ribbon-button span:nth-child(3){
 	width: 60%;
+}
+
+.data-page-breadcrumb > ul > li{
+	color: #000000;	
+}
+
+.data-page-breadcrumb > ul > li > a{
+	color: #000000;	
+}
+
+.data-page-breadcrumb > ul > li > a:hover,
+.data-page-breadcrumb > ul > li > a:focus{
+	color: #000000;	
+	text-decoration: underline;
 }
