--- a/app/views/cover/cover.html
+++ b/app/views/cover/cover.html
@@ -38,8 +38,8 @@
 							<div class="col-xs-12 col-sm-2 form-group">
 								<div class="row">
 									<div class="lp-select-city">
-										<div class="lp-select-city-text" ng-click="vm.toggleDropdown()">
-											<span class="lp-label-city">CITY</span>
+										<div class="lp-select-city-text" data-ng-class="!vm.selectedCity && !vm.cityUntouched ? 'noselection-error' : ''" ng-click="vm.toggleDropdown()">
+											<!--<span class="lp-label-city">CITY</span>-->
 											<span class="lp-selected-city">{{vm.selectedCity}}</span>
 											<span class="fa fa-fw fa-map-marker float-right location-icon"></span>
 										</div>
@@ -55,9 +55,9 @@
 							<div class="col-xs-12 col-sm-2 form-group">
 								<div class="row">
 									<div class="lp-select-category">
-										<div class="lp-select-category-text" ng-click="vm.toggleCategoryDropdown()">
-											<span class="lp-label-category">VENDOR TYPE</span>
-											<span class="lp-selected-category">{{vm.categoryMap[vm.selectedCategory]}}<span class="fa fa-fw float-right category-icons" data-ng-class="{{'vm.categoryIconsMap[vm.selectedCategory]'}}"></span></span>
+										<div class="lp-select-category-text" ng-click="vm.toggleCategoryDropdown()" data-ng-class="!vm.selectedCategory && !vm.categoryUntouched ? 'noselection-error' : ''">
+											<!--<span class="lp-label-category">VENDOR TYPE</span>-->
+											<span class="lp-selected-category">{{vm.categoryMap[vm.selectedCategory]}}<span class="fa fa-fw float-right category-icons" data-ng-class="{{'vm.categoryIconsMap[vm.selectedCategory]'}}" data-ng-if="vm.selectedCategory"></span></span>
 
 										</div>
 										<ul class="lp-category-dropdown">
